# TVD-inference

./: .gitignore  README.md  TVD-Sampler-README.md  environment.conda.yml  lesson.md  plan.md  pyproject.toml  requirements.txt
code/: adaptive_deterministic_refinement_followup.py  adaptive_noise_sampler_followup.py  baselines.py  benchmark_otflow_suite.py  build_adaptive_solver_matched_nfe_study.py  build_hardness_mismatch_figure.py  build_ptg_observed_gain_figure.py  conditioning.py  deepmarket_baselines.py  diffusion_flow_schedules.py  diffusion_flow_time_reparameterization.py  experiment_common.py  fm_backbone_readiness_audit.py  fm_backbone_registry.py  merge_otflow_baseline_main_table.py  modules.py  otflow_baselines.py  otflow_dataset_audit.py  otflow_datasets.py  otflow_evaluation_support.py  otflow_experiment_plan.py  otflow_external_schedule_catalog.json  otflow_forecast_data.py  otflow_medical_constants.py  otflow_medical_datasets.py  otflow_model.py  otflow_monash_datasets.py  otflow_paper_registry.py  otflow_paper_tables.py  otflow_paths.py  otflow_rollout_length_review.py  otflow_signal_traces.py  otflow_train_val.py  otflow_utils.py  temporal_baselines.py  test_adaptive_solver_matched_nfe_study.py  test_backbone_matrix.py  test_hardness_mismatch_figure.py  test_otflow_paper_prep.py  test_ptg_observed_gain_figure.py
legacy/: archive_manifest_20260421T091905Z.json
tests/: test_adaptive_solver_matched_nfe_study.py  test_backbone_matrix.py  test_dataset_bundle.py  test_hardness_mismatch_figure.py  test_otflow_paper_prep.py  test_ptg_observed_gain_figure.py
(+86 files in other folders)
