[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "diffusion-flow-inference"
version = "0.1.0"
description = "Diffusion-to-flow schedule transfer and OTFlow evaluation tools."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy==2.4.2",
  "scipy>=1.11",
  "matplotlib>=3.8,<4",
  "torch==2.10.0",
  "wfdb>=4.1",
  "pyedflib>=0.1.38",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
diffusion_flow_inference = ["schedules/*.json"]
